# shelfy

./: .env.example  .gitignore  README.md  render.yaml  vercel.json
apps/backend/: .env.example  Dockerfile  pyproject.toml
apps/backend/app/: config.py  deps.py  main.py
apps/backend/app/api/routes/: arrange.py  audit.py  ingest.py  planogram.py
apps/backend/app/models/: schemas.py
apps/backend/app/repositories/: audit.py  base.py  brand.py  planogram.py
apps/backend/app/services/: arrange.py  audit.py  embeddings.py  generation.py  ingestion.py
apps/backend/sql/: 001_schema.sql  002_seed.sql  003_pgvector.sql
apps/backend/tests/: conftest.py  test_audit.py  test_brand_repo.py  test_generation.py  test_ingestion.py  test_planogram_repo.py
apps/frontend/: package-lock.json  package.json
apps/frontend/app/: layout.tsx  page.tsx  providers.tsx
apps/frontend/app/arrange/: page.tsx
apps/frontend/app/audit/: page.tsx
apps/frontend/app/ingest/: page.tsx
apps/frontend/app/planogram/: page.tsx
apps/frontend/components/: audit-overlay.tsx  compliance-diagram.tsx  discrepancy-list.tsx  file-upload.tsx  ingest-sidebar.tsx  nav.tsx  shelf-grid.tsx
apps/frontend/lib/: api.ts
docs/superpowers/plans/: 2026-04-17-shelfy-poc.md
docs/superpowers/specs/: 2026-04-17-shelfy-poc-design.md
